--- a/src/pages/addProductPage/ui/addProductPage.module.css
+++ b/src/pages/addProductPage/ui/addProductPage.module.css
@@ -1,3 +1,22 @@
+.menuHeader {
+    border: 1px solid rgba(0, 0, 0, 0.69);
+    border-radius: 2px;
+    width: 142px;
+    height: 19px;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.dropMenu {
+    display: none;
+}
+
+.openMenu {
+    display: block;
+}
+
 .form {
     display: flex;
     flex-direction: column;
