--- a/src/pages/addProductPage/ui/addProductPage.module.css
+++ b/src/pages/addProductPage/ui/addProductPage.module.css
@@ -11,6 +11,17 @@
 
 .dropMenu {
     display: none;
+    width: 142px;
+}
+
+.dropMenu > div {
+
+}
+
+.dropMenu > div:hover {
+    background-color: #535bf2;
+    color: aqua;
+    cursor: pointer;
 }
 
 .openMenu {
