push changed to concat

--- a/src/pages/homePage/ui/homePage.module.css
+++ b/src/pages/homePage/ui/homePage.module.css
@@ -1,6 +1,6 @@
 .date {
-    color: rgba(90, 223, 211, 0.4);
-    background-color: brown;
+    color: white;
+    background-color: rgba(128, 128, 128, 0.84);
 }
 
 .expProducts {
